compiler-core/src/parse/snapshots/gleam_core__parse__tests__pub_function_inside_a_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype Wibble {\n  public fn wobble() {}\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
  public fn wobble() {}
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:3
  │
3 │   public fn wobble() {}
  │   ^^^^^^ I was not expecting this

Found the keyword `public`, expected one of:
- `}`
- a record constructor
Hint: Gleam is not an object oriented programming language so
functions are declared separately from types.
